--- a/WonInfo/app/src/main/res/drawable/all_ripple_click.xml
+++ b/WonInfo/app/src/main/res/drawable/all_ripple_click.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/Theme_LightGray">
+    android:color="@color/Theme_Gray">
 
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
