스낵바,홈화면 #스낵바수정 #시작화면설정

--- a/WonInfo/app/src/main/res/layout/create_user_activity.xml
+++ b/WonInfo/app/src/main/res/layout/create_user_activity.xml
@@ -158,4 +158,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_user_activity_3"
         app:layout_constraintVertical_bias="0.208" />
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/create_layout_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
