--- a/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
+++ b/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
@@ -79,9 +79,12 @@
         app:menu="@menu/bottom_bar"
         app:labelVisibilityMode="unlabeled"/>
 
-
-
-
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/snackbar_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="?attr/actionBarSize"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
