--- a/WonInfo/app/src/main/res/values/styles.xml
+++ b/WonInfo/app/src/main/res/values/styles.xml
@@ -28,6 +28,10 @@
         <item name="listPreferredItemHeightSmall">36dp</item>
     </style>
 
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="Apptheme.BottomItems" parent="AppTheme">
         <item name="android:textSize">2sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
