--- a/WonInfo/app/src/main/res/layout/login_activity.xml
+++ b/WonInfo/app/src/main/res/layout/login_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="350dip"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorBackground">
 
     <RelativeLayout
         android:layout_width="296dp"
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:mtf_image="@drawable/ic_login_id"
-                app:mtf_labelColor="@color/Theme_White"
+                app:mtf_labelColor="@color/Theme_Blue"
                 app:mtf_openKeyboardOnFocus="true"
                 tools:layout_editor_absoluteX="42dp"
                 tools:layout_editor_absoluteY="16dp">
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 app:mtf_image="@drawable/ic_login_pw"
-                app:mtf_labelColor="@color/Theme_White"
+                app:mtf_labelColor="@color/Theme_Blue"
                 app:mtf_openKeyboardOnFocus="true"
                 tools:layout_editor_absoluteX="42dp"
                 tools:layout_editor_absoluteY="16dp">
@@ -70,7 +70,7 @@
             android:layout_marginBottom="10dp"
             android:text="ID, PW 는 암호화 되지 않고\n현재 기기에 저장됩니다"
             android:textAlignment="center"
-            android:textColor="@color/Theme_White" />
+            android:textColor="@color/Theme_Red" />
 
         <Button
             android:id="@+id/login_btn_submit"
