--- a/WonInfo/app/src/main/res/layout/nav_header_main.xml
+++ b/WonInfo/app/src/main/res/layout/nav_header_main.xml
@@ -10,7 +10,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/nav_btn_profilepic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -36,15 +36,15 @@
         android:text="로그인"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/nav_btn_profilepic" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/nav_btn_profilepic"
+        app:layout_constraintTop_toTopOf="@+id/nav_btn_profilepic"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <ImageView
@@ -53,7 +53,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/nav_btn_profilepic"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
