--- a/WonInfo/app/src/main/res/values/styles.xml
+++ b/WonInfo/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent= "Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <!--<item name="android:textColor">@color/colorPrimaryDark</item>      테마 글씨체 (지우면 원래색) -->
 
