--- a/WonInfo/app/src/main/res/layout/community_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_item.xml
@@ -2,8 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/community_main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:background="@drawable/all_ripple_click">
 
 
     <android.support.constraint.Guideline
@@ -33,7 +36,6 @@
         android:layout_height="wrap_content"
 
         android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
         android:text="title"
         android:textColor="@color/Theme_Black"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -47,15 +49,15 @@
 
         android:layout_height="wrap_content"
 
-        android:layout_marginBottom="8dp"
-
         android:layout_marginTop="8dp"
+
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:text=""
-        android:textColor="@color/Theme_Blue"
         android:textAlignment="center"
-        android:textStyle="bold"
+        android:textColor="@color/Theme_Blue"
         android:textSize="@dimen/list_item_bigtitle_size"
+        android:textStyle="bold"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -67,9 +69,9 @@
         android:id="@+id/community_list_item_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:text="content"
         android:textColor="@color/Theme_Gray"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -115,8 +117,8 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:background="@drawable/item_line"
+        android:layout_height="1dp"
+        android:background="@color/Theme_Gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
