--- a/WonInfo/app/src/main/res/layout/community_text_comments_profile.xml
+++ b/WonInfo/app/src/main/res/layout/community_text_comments_profile.xml
@@ -25,9 +25,11 @@
             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="59dp"
-                android:layout_height="54dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/community_board_title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_profile" />
@@ -38,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
                 android:layout_marginTop="10dp"
-                android:text="멍충멍충"
+                android:text="익명"
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
@@ -46,12 +48,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/a_26_text02"
+                android:id="@+id/community_board_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
                 android:layout_marginTop="35dp"
-                android:text="31분전"
                 android:textColor="@color/Theme_Gray"
                 android:textSize="@dimen/bigtitle_size"
                 android:textStyle="bold"
@@ -59,25 +60,25 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/a_26_text03"
+                android:id="@+id/community_board_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="68dp"
-                android:text="대학로 수선집"
+                android:layout_marginBottom="30dp"
                 android:textColor="@color/Theme_Black"
                 android:textSize="@dimen/list_item_bigtitle_size"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/community_board_content"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/community_board_content"
+                app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
             <TextView
-                android:id="@+id/a_26_text04"
+                android:id="@+id/community_board_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="95dp"
-                android:text="다들 어디서해?"
                 android:textColor="@color/Theme_Black"
                 android:textSize="@dimen/bigtitle_size"
                 app:layout_constraintStart_toStartOf="parent"
