--- a/WonInfo/app/src/main/res/layout/community_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_main_fragment.xml
@@ -44,7 +44,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/community_main_text1"
-            app:srcCompat="@drawable/ic_bamboo" />
+            app:srcCompat="@drawable/ic_bamboo"
+            android:tint="@color/Theme_Gray" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -82,7 +83,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_free_community" />
+            app:srcCompat="@drawable/ic_free_community"
+            android:tint="@color/Theme_Gray" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -121,7 +123,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_market" />
+            app:srcCompat="@drawable/ic_market"
+            android:tint="@color/Theme_Gray"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -157,7 +160,8 @@
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_car" />
+            app:srcCompat="@drawable/ic_car"
+            android:tint="@color/Theme_Gray"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -195,7 +199,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_speaker_2" />
+            app:srcCompat="@drawable/ic_speaker_2"
+            android:tint="@color/Theme_Gray" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -233,7 +238,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_bbs" />
+            app:srcCompat="@drawable/ic_bbs"
+            android:tint="@color/Theme_Gray"/>
 
     </android.support.constraint.ConstraintLayout>
 
